Fix Vercel SPA routing 404s

--- a/src/locales/am.json
+++ b/src/locales/am.json
@@ -43,36 +43,36 @@
     "programs": "ፕሮግራሞች",
     "membership": "አባልነት",
     "contact": "ያግኙን",
-    "futsalBooking": "ፉትሳል ማስያዝ",
-    "educationalServices": "የትምህርት አገልግሎቶች",
-    "prayerTimes": "የስግደት ሰዓቶች",
+    "futsalBooking": "ፉትሳል ማስያዣ",
+    "educationalServices": "ትምህርታዊ አገልግሎቶች",
+    "prayerTimes": "የሶላት ሰዓቶች",
     "events": "ዝግጅቶች",
     "news": "ዜናዎች",
-    "gallery": "ጋለሪ",
-    "itikafProgram": "ኢእቲ ፕሮግራም",
-    "dersProgram": "ደርስ ፕሮግራም",
+    "gallery": "ቅንብሮች",
+    "itikafProgram": "የኢዕቲካፍ ፕሮግራሞች",
+    "dersProgram": "የደርስ ፕሮግራሞች",
     "donate": "ለመለገስ",
-    "islamicCalendar": "የእስላም የቀን መቁጠሪያ",
+    "islamicCalendar": "የኢስላም የቀን መቁጠሪያ",
     "resources": "ግብዓቶች",
     "qiblaDirection": "የቂብላ አቅጣጫ"
   },
   "calendar": {
-    "title": "እስላማዊ",
+    "title": "ኢስላማዊ",
     "titleHighlight": "የቀን መቁጠሪያ",
-    "description": "እስላማዊ (ሂጅራ) የቀን መቁጠሪያን ከግሪጎርያን የቀን መቁጠሪያ ጎን ለጎን ይመልከቱ።",
+    "description": "ኢስላማዊ (ሂጅራ) የቀን መቁጠሪያን ከግሪጎርያን የቀን መቁጠሪያ ጎን ለጎን ይመልከቱ።",
     "todayGregorian": "ዛሬ (ግሪጎርያን)",
     "todayHijri": "ዛሬ (ሂጅራ)",
     "gregorianCalendar": "ግሪጎርያን የቀን መቁጠሪያ",
     "selectedDate": "የተመረጠ ቀን",
     "hijriApprox": "ሂጅራ (ግምታዊ)",
     "gregorian": "ግሪጎርያን",
-    "hijriSuffix": "ሂ.ገ",
+    "hijriSuffix": "ሂ.ጅ",
     "aboutTitle": "ስለ ሂጅራ የቀን መቁጠሪያ",
-    "aboutDescription": "የእስላም የቀን መቁጠሪያ (ሂጅራ የቀን መቁጠሪያ) በዓመት 354 ወይም 355 ቀናት ያላቸው 12 ወራትን የያዘ የጨረቃ የቀን መቁጠሪያ ነው።",
+    "aboutDescription": "የኢስላም የቀን መቁጠሪያ (ሂጅራ የቀን መቁጠሪያ) በዓመት 354 ወይም 355 ቀናት ያላቸው 12 ወራትን የያዘ የጨረቃ የቀን መቁጠሪያ ነው።",
     "note": "ማስታወሻ",
-    "accuracyNote": "ይህ የቀን መቁጠሪያ ግምታዊ የሂጅራ ቀናትን ያሳያል። ለትክክለኛ ቀናት የአካባቢዎን እስላማዊ ባለስልጣን ወይም የስነ-ከዋክብት ስሌቶችን ያማክሩ።",
-    "importantMonths": "አስፈላጊ የእስላም ወራት",
-    "ramadan": "ረመዳን",
+    "accuracyNote": "ይህ የቀን መቁጠሪያ ግምታዊ የሂጅራ ቀናትን ያሳያል። ለትክክለኛ ቀናት የአካባቢዎን ኢማም ወይም የስነ-ከዋክብት ስሌቶችን ያማክሩ።",
+    "importantMonths": "አስፈላጊ የኢስላም ወራት",
+    "ramadan": "ረመዷን",
     "fasting": "ጾም",
     "dhulHijjah": "ዙልሂጃ",
     "hajj": "ሀጅ",
@@ -82,7 +82,7 @@
     "nextMonth": "የሚቀጥለው ወር",
     "adjustment": "የሂጅራ ማስተካከያ",
     "adjustmentDesc": "የሂጅራ ቀንን ከአካባቢው ጨረቃ እይታ ጋር ለማዛመድ በ +/- 2 ቀናት ያስተካክሉ።",
-    "adjustmentNote": "ለውጦች በጠቅላሁ ስርዓት ላይ ይንጸባረቃሉ።",
+    "adjustmentNote": "ለውጦቹ በሙሉ የቀን መቁጠሪያ ስርዓት ላይ ይንጸባረቃሉ።",
     "syncing": "ትክክለኛ ቀናትን በማመሳሰል ላይ...",
     "accurateSource": "ከAladhan API ጋር የተመሳሰለ",
     "verified": "የተረጋገጠ",
@@ -92,14 +92,14 @@
         "ሙሃረም",
         "ሰፈር",
         "ረቢ አል-አወል",
-        "ረቢ አል-ታኒ",
-        "ጁማዳ አል-አወል",
-        "ጁማዳ አል-ታኒ",
+        "ረቢ አል-ሳኒ",
+        "ጁማዱ አል-አወል",
+        "ጁማዱ አል-ሳኒ",
         "ረጀብ",
-        "ሻባን",
-        "ረመዳን",
-        "ሻዋል",
-        "ዙልቂዳህ",
+        "ሻዕባን",
+        "ረመዷን",
+        "ሸዋል",
+        "ዙል አል-ቃኢዳ",
         "ዙልሂጃ"
       ]
     },
@@ -114,34 +114,34 @@
     }
   },
   "hero": {
-    "welcomeToTeqwa": "ወደ ተቃዋ እንኳን ደህና መጡ",
-    "experienceBeauty": "የእስላም ማህበረሰብ",
-    "islamicCommunity": "ውበትን ይለማመዱ",
-    "joinUsSubtitle": "እምነትዎን እና አላህን ጋር ያለዎትን ግንኙነት ለማጠናከር በዕለታዊ ስግደቶቻችን፣ የትምህርት ፕሮግራሞቻችን እና የማህበረሰብ ዝግጅቶቻችን ይቀላቀሉን።",
+    "welcomeToTeqwa": "ወደ ሙጀማ አት-ተቅዋ እንኳን ደህና መጡ",
+    "experienceBeauty": "የኢስላም ማህበረሰብ",
+    "islamicCommunity": "ውበትን ይመልከቱ",
+    "joinUsSubtitle": "እምነትዎን እና ከአሏህ ጋር ያለዎትን ግንኙነት ለማጠናከር በዕለታዊ የሶላት ወቅቶቻችን፣ የሙሃደራ ፕሮግራሞቻችን እና የማህበረሰብ ዝግጅቶቻችን ይቀላቀሉን።",
     "explorePrograms": "ፕሮግራሞችን ያስሱ",
     "aboutUs": "ስለእኛ",
-    "mujeaAtTekwa": "ሙጀአ አት-ተቃዋ",
+    "mujeaAtTekwa": "ሙጀማ አት-ተቅዋ",
     "buildingStrong": "ጠንካራ",
     "faithCommunity": "የእምነት ማህበረሰብ",
-    "togetherWeGrow": "አብረን በእምነት፣ በእውቀት እና ለማህበረሰባችን እና በላይ በአገልግሎት እንድንሳተፍ እንሰራለን።",
-    "blessedFriday": "በረከት ያለው ዓርብ",
+    "togetherWeGrow": "አብረን በእምነት፣ በእውቀት እና በተግባር ለማህበረሰባችን እና ለሃገራችን እንሰራለን።",
+    "blessedFriday": "በረካ ያለው ዓርብ",
     "bestDayIs": "ምርጥ ቀን",
     "friday": "ዓርብ",
-    "jumuahSubtitle": "ዛሬ ሱራ አል-ከህፍን ማንበብ እና በመልእክተኛው (ﷺ) ላይ ሰላውት ላክ አትርሳ። ለበረከት ያለው ጁሙአ ስግደት ይቀላቀሉን።",
-    "todayKhutbah": "ዛሬ የኸውትባ በ{{name}} ይቀርባል። ዛሬ ሱራ አል-ከህፍን ማንበብ እና በመልእክተኛው (ﷺ) ላይ ሰላውት ላክ አትርሳ። ለበረከት ያለው ጁሙአ ስግደት ይቀላቀሉን።",
-    "prayerTimes": "የስግደት ሰዓቶች",
+    "jumuahSubtitle": "ዛሬ ሱራ አል-ከህፍን ማንበብ እና በመልእክተኛው (ﷺ) ላይ ሶለዋት ማውረድን አይርሱ። የጁሙዐ ሶላትን ከኛ ጋር ይስገዱ።",
+    "todayKhutbah": "የዛሬው ኹጥባ በ{{name}} ይቀርባል። ዛሬ ሱራ አል-ከህፍን ማንበብ እና በመልእክተኛው (ﷺ) ላይ ሶለዋት ማውረድን አይርሱ። የጁሙዐ ሶላትን ከኛ ጋር ይስገዱ።",
+    "prayerTimes": "የሶላት ሰዓቶች",
     "readSurahKahf": "ሱራ ከህፍን አንብብ"
   },
   "footer": {
     "quickLinks": "ፈጣን አገናኞች",
-    "resources": "መርጃዎች",
+    "resources": "መረጃዎች",
     "legal": "ሕጋዊ",
     "aboutUs": "ስለእኛ",
     "donate": "ለመለገስ",
     "quran": "ቁርአን",
     "hadith": "ሀዲስ",
-    "islamicCalendar": "የእስላም የቀን መቁጠሪያ",
-    "qiblaDirection": "የቅብላ አቅጣጫ",
+    "islamicCalendar": "የኢስላም የቀን መቁጠሪያ",
+    "qiblaDirection": "የቂብላ አቅጣጫ",
     "privacyPolicy": "የግላዊነት ፖሊሲ",
     "termsOfService": "የአገልግሎት ውሎች",
     "cookiePolicy": "የኩኪ ፖሊሲ",
@@ -152,56 +152,56 @@
     "newsUpdates": "ዜናዎች እና ዝመናዎች",
     "generalInquiries": "አጠቃላይ ጥያቄዎች",
     "officeHours": "የቢሮ ሰዓቶች",
-    "openDaily": "በየቀኑ ክፍት",
+    "openDaily": "በየቀኑ ክፍት ነው",
     "builtWith": "በ",
     "backToTop": "ወደ ላይ ተመለስ",
     "forCommunity": "ለማህበረሰባችን",
-    "poweredBy": "በብሮልፍ ቴክዋ ግንቢዎች የቀረበ",
+    "poweredBy": "በብሮልፍ ቴክ ቡድን የቀረበ",
     "donations": "ለመለገስ",
-    "futsalBooking": "ፉትሳል ማስያዝ",
+    "futsalBooking": "ፉትሳል ለማስያዝ",
     "educationalServices": "የትምህርት አገልግሎቶች",
-    "itikafPrograms": "ኢትከፍ ፕሮግራሞች",
-    "gallery": "ጋለሪ",
+    "itikafPrograms": "የኢዕቲካፍ ፕሮግራሞች",
+    "gallery": "ቅንብሮች",
     "home": "መነሻ",
-    "prayerTimes": "የስግደት ሰዓቶች",
+    "prayerTimes": "የሶላት ሰዓቶች",
     "events": "ዝግጅቶች",
     "contact": "ያግኙን"
   },
   "prayer": {
-    "fajr": "ፋጅር",
-    "sunrise": "ፀሐይ መውጣት",
-    "dhuhr": "ዱህር",
+    "fajr": "ፈጅር",
+    "sunrise": "ፀሐይ መውጫ",
+    "dhuhr": "ዙሁር",
     "asr": "አስር",
-    "maghrib": "ማግሪብ",
+    "maghrib": "መግሪብ",
     "isha": "ኢሻ",
-    "jummah": "ጁሙአ",
-    "prayerTimes": "የስግደት ሰዓቶች",
-    "nextPrayer": "ቀጣይ ስግደት",
+    "jummah": "ጁሙዐ",
+    "prayerTimes": "የሶላት ሰዓቶች",
+    "nextPrayer": "ቀጣይ ሶላት",
     "timeUntil": "እስከ {{prayer}} ድረስ የቀረው ጊዜ",
     "currentTime": "የአሁኑ ሰዓት",
     "next": "ቀጣይ",
     "tomorrow": "ነገ",
     "now": "አሁን:",
     "schedule": "መርሐግብር",
-    "qibla": "ቅብላ",
+    "qibla": "ቂብላ",
     "noDataAvailable": "ውሂብ አልተገኘም"
   },
   "qibla": {
     "title": "የእርስዎን",
-    "titleHighlight": "የቅብላ አቅጣጫ ይፈልጉ",
-    "description": "የቅብላ (ካዕባ) አቅጣጫን ከየትኛውም የዓለም ክፍል በትክክል ያግኙ።",
-    "aboutQibla": "ስለ ቅብላ",
-    "aboutQiblaDescription": "ቅብላ ሙስሊሞች በስግደት ጊዜ የሚዞሩበት አቅጣጫ ነው። እሱም በለ መካ፣ ሳውዲ አረቢያ የሚገኘውን ካዕባ ያመለክታል። ይህ መሳሪያ በእርስዎ የአሁኑ አካባቢ ላይ በመመስረት ትክክለኛውን አቅጣጫ ለማግኘት ይረዳዎታል።",
+    "titleHighlight": "የቂብላ አቅጣጫ ይፈልጉ",
+    "description": "የቂብላ (ካዕባ) አቅጣጫን ከየትኛውም ሃገር በትክክል ያግኙ።",
+    "aboutQibla": "ስለ ቂብላ",
+    "aboutQiblaDescription": "ቂብላ ሙስሊሞች በስግደት ጊዜ የሚዞሩበት አቅጣጫ ነው። እሱም ወደ መካ፣ ሳውዲ አረቢያ የሚገኘውን ካዕባ ያመለክታል። ይህ መሳሪያ በእርስዎ የአሁኑ አካባቢ ላይ በመመስረት ትክክለኛውን አቅጣጫ ለማግኘት ይረዳዎታል።",
     "howToUse": "እንዴት መጠቀም እንደሚቻል",
-    "allowLocationAccess": "ለትክክለኛ ውጤቶች የአካባቢ መዳረሻን ይፍቀዱ።",
-    "useDeviceCompass": "መሳሪያዎን በ8 figur motion በማንቀሳቀስ የኮምፓስዎን ያስተካክሉ።",
+    "allowLocationAccess": "ለትክክለኛ ውጤቶች የአካባቢ መዳረሻን (ሎኬሽን) ይፍቀዱ።",
+    "useDeviceCompass": "ስልኮን ወይም ኮምፒውተሮን በ8 figur motion በማንቀሳቀስ ኮምፓስዎን ያስተካክሉ።",
     "faceDirection": "ራስዎን በኮምፓሱ ላይ ካለው ቀስት ጋር ያስተካክሉ።",
-    "qiblaCompass": "የቅብላ ኮምፓስ",
-    "qiblaFromNorth": "ቅብላ ከሰሜን",
-    "fromNorth": "ላይ ነው",
-    "compassActive": "ኮምፓስ እየሰራ ነው",
-    "enableCompassDescription": "ለቀጥታ ኮምፓስ መከታተያ የመሳሪያ አቅጣጫን ይፍቀዱ",
-    "enableCompass": "ኮምፓስን አስጀምር"
+    "qiblaCompass": "የቂብላ ኮምፓስ",
+    "qiblaFromNorth": "ቂብላ ከሰሜን",
+    "fromNorth": "ከሰሜን",
+    "compassActive": "ኮምፓሱ እየሰራ ነው",
+    "enableCompassDescription": "ለቀጥታ ኮምፓስ መከታተያ የመሳሪያ አቅጣጫን (ሎኬሽን) ይፍቀዱ",
+    "enableCompass": "ኮምፓሱን አስጀምር"
   },
   "events": {
     "title": "ዝግጅቶች",
@@ -216,7 +216,7 @@
     "eventTime": "የዝግጅቱ ሰዓት",
     "location": "አካባቢ",
     "communityEvents": "የማህበረሰብ ዝግጅቶች",
-    "joinUsDescription": "በሙጀሜያ አት-ቴክዋ ለመንፈሳዊ፣ ለትምህርታዊ እና ለማህበረሰብ ግንባታ ዝግጅቶች ይቀላቀሉን።",
+    "joinUsDescription": "በሙጀማ አት-ተቅዋ የመንፈሳዊ፣ የትምህርታዊ እና የማህበረሰብ ግንባታ ዝግጅቶችን ይቀላቀሉ።",
     "searchEvents": "ዝግጅቶችን ፈልግ...",
     "allCategories": "ሁሉም ምድቦች",
     "showPastEvents": "ያለፉ ዝግጅቶችን አሳይ",
@@ -255,8 +255,8 @@
     "title": "ለመለገስ",
     "makeDonation": "ምጽዋት ስጥ",
     "activeCampaigns": "ንቁ ዘመቻዎች",
-    "supportCommunity": "የማህበረሰባችንን ተነሳሽነቶች ድገፉ",
-    "donationSubtitle": "የእናንተ ለጋስ ምጽዋቶች መስጊዱን ለመጠበቅ፣ የትምህርት ፕሮግራሞችን ለመደገፍ እና ማህበረሰቡን ለመለገስ ይረዳናል። እያንዳንዱ አስተዋጽዖ ልዩነት ያመጣል።",
+    "supportCommunity": "የማህበረሰባችንን ተነሳሽነቶች ይደግፉ",
+    "donationSubtitle": "የእናንተ ለጋስ ምጽዋቶች መስጂዱን ለመጠበቅ፣ የትምህርት ፕሮግራሞችን ለመደገፍ እና ማህበረሰቡን ለመለገስ ይረዳናል። እያንዳንዱ አስተዋጽዖ ልዩነት ያመጣል።",
     "donateNow": "አሁኑኑ ለመለገስ",
     "viewCauses": "ምክንያቶችን እይ",
     "communitySupport": "የማህበረሰብ ድጋፍ",
@@ -265,17 +265,17 @@
     "donation": "ምጽዋት",
     "donations": "ምጽዋቶች",
     "powerOfSadaqah": "የሰዳቃ ኃይል",
-    "sadaqahDescription": "ምጽዋት (ሰዳቃ) ብቻ ምጽዋት አይደለም፤ የእምነት ማስረጃ እና ገንዘብን እና ነፍስን ለማጽዳት መንገድ ነው። እያንዳንዱ አስተዋጽዖ፣ ምንም ቢጠቃለል ቢሆን፣ በአላህ ፊት አስፈላጊ ተጽዕኖ ያሳድራል።",
-    "purifiesWealth": "ገንዘብን ያጽዳል እና አቅርቦትን ይጨምራል",
-    "extinguishesSins": "ኃጢአቶችን እንደ ውሃ እሳትን እንደሚጠፋ ያጠፋል",
+    "sadaqahDescription": "ምጽዋት (ሰደቃ) ብቻ ምጽዋት አይደለም፤ የእምነት ማስረጃ እና ገንዘብን እና ነፍስን ለማጽዳት መንገድ ነው። እያንዳንዱ አስተዋጽዖ፣ ምንም ቢጠቃለል ቢሆን፣ በአላህ ፊት አስፈላጊ ተጽዕኖ ያሳድራል።",
+    "purifiesWealth": "ገንዘብን ያጸዳል እና ሪዝቅን ይጨምራል",
+    "extinguishesSins": "ውሃ እሳትን እንደሚያጠፋው ሁሉ ምጽዋት ወንጀላችንን ያጠፋል",
     "providesShade": "በፍርድ ቀን ጥላ ይሰጣል",
     "supportsNeedy": "ድሃዎችን ይደግፋል እና ማህበረሰብን ያጠናክራል",
-    "quranicVerseTranslation": "\"የእነዚያ ገንዘቦቻቸውን በአላህ መንገድ የሚወጡት ምሳሌ እንደ አንድ ዘር ነው፣ ሰባት ገቦችን ያበቅላል፤ በእያንዳንዱ ገብ ውስጥ መቶ ዘሮች አሉ።\"",
-    "quranicReference": "— ሱራ አል-ባቃራ [2:261]",
+    "quranicVerseTranslation": "\"የእነዚያ ገንዘቦቻቸውን በአላህ መንገድ የሚያወጡት ምሳሌ እንደ አንድ ዘር ነው፣ ሰባት ሰብሎችን ያበቅላል፤ በእያንዳንዱ ሰብል ውስጥ መቶ ዘሮች አሉ።\"",
+    "quranicReference": "— ሱራ አል-በቀራ [2:261]",
     "whyContribute": "ለምን እንደገና እንደገና?",
-    "whyContributeDesc": "ለብርሃን፣ ለአስተዳደር እና ምጽዋቶችዎ በማህበረሰባችን ላይ ከፍተኛ አዎንታዊ ተጽዕኖ እንዲኖራቸው እንገዛለን።",
+    "whyContributeDesc": "ለብርሃን፣ ለአስተዳደር እና ምጽዋቶችዎ በማህበረሰባችን ላይ ከፍተኛ አዎንታዊ ተጽዕኖ እንዲኖራቸው እንሰራለን።",
     "hundredPercentSecure": "100% ደህንነቱ የተጠበቀ",
-    "hundredPercentSecureDesc": "ክፍያዎችዎ በባንክ ደረጃ ምስጢር ማመስጠር ይከናወናሉ።",
+    "hundredPercentSecureDesc": "ክፍያዎችዎ በባንክ ደረጃ በሚስጥር ይከናወናሉ።",
     "transparent": "ብርሃን",
     "transparentDesc": "ገንዘቦች ለማህበረሰቡ እንዴት እንደሚውሉ ስለ መደበኛ ሪፖርቶች እናቀርባለን።",
     "zakatEligible": "ዘካት የሚገባ",
