--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -118,7 +118,7 @@
     }
   },
   "hero": {
-    "welcomeToTeqwa": "Welcome to Teqwa",
+    "welcomeToTeqwa": "Welcome to Mujemea At-Teqwa",
     "experienceBeauty": "Experience the Beauty of",
     "islamicCommunity": "Islamic Community",
     "joinUsSubtitle": "Join us in our daily prayers, educational programs, and community events to strengthen your faith and connection with Allah.",
