qr code paymentintegrated 2

--- a/src/locales/am.json
+++ b/src/locales/am.json
@@ -1473,14 +1473,14 @@
       "notifyOnNewUser": "በአዲስ ተጠቃሚ ላይ ማሳወቅ",
       "notifyOnNewDonation": "በአዲስ ምጽዋት ላይ ማሳወቅ",
       "jumuahSettings": "የጁሙአ ቅንብሮች",
-      "jumuahKhatibName": "የኸቲብ ስም",
-      "jumuahKhatibTitle": "የኸቲብ ርዕስ",
-      "jumuahKhatibPhoto": "የኸቲብ ፎቶ URL",
+      "jumuahKhatibName": "የኸጢብ ስም",
+      "jumuahKhatibTitle": "የኸጢብ ርዕስ",
+      "jumuahKhatibPhoto": "የኸጢብ ፎቶ URL",
       "dailyImamSettings": "የዕለታዊ ኢማም ቅንብሮች",
-      "dailyImamFajr": "የፋጅር ኢማም",
+      "dailyImamFajr": "የፈጅር ኢማም",
       "dailyImamDhuhr": "የዙህር ኢማም",
       "dailyImamAsr": "የአስር ኢማም",
-      "dailyImamMaghrib": "የማግሪብ ኢማም",
+      "dailyImamMaghrib": "የመግሪብ ኢማም",
       "dailyImamIsha": "የኢሻ ኢማም",
       "saveSettings": "ቅንብሮችን አስቀምጥ",
       "saving": "በመቀመጥ ላይ...",
