qr code paymentintegrated updated

--- a/src/locales/am.json
+++ b/src/locales/am.json
@@ -39,7 +39,15 @@
     "clickToUpload": "ለመስቀል ጠቅ ያድርጉ",
     "orDragAndDrop": "ወይም ይጎትቱ እና ይጣሉ",
     "viewDetails": "ዝርዝሮችን እይ",
-    "invalidFileType": "እባክዎ የምስል ፋይል ይስቀሉ"
+    "invalidFileType": "እባክዎ የምስል ፋይል ይስቀሉ",
+    "free": "ነጻ",
+    "download": "ያውርዱ",
+    "enrolled": "ተመዝግቧል",
+    "pending": "በመጠባበቅ ላይ",
+    "confirmed": "የተረጋገጠ",
+    "cancelled": "የተሰረዘ",
+    "completed": "ተጠናቅቋል",
+    "waitlisted": "በተጠባባቂ ዝርዝር ውስጥ"
   },
   "payment": {
     "selectMethod": "የክፍያ ዘዴ ይምረጡ",
@@ -428,6 +436,8 @@
     "hadithStudies": "የሀዲስ ጥናት",
     "dersProgram": "የሳምንት ደርስ ፕሮግራም",
     "dersProgramDesc": "የእስላም ንግግሮች እና ክፍሎች የሳምንት መርሐግብርን ይመልከቱ።",
+    "serviceFull": "አገልግሎት ሞልቷል",
+    "notAvailable": "አይገኝም",
     "failedToLoadServices": "የትምህርት አገልግሎቶችን ለመጫን አልተሳካም",
     "enrollmentSubmitted": "ምዝገባ ለግምገማ ቀርቧል! አንዴ ከተረጋገጠ እናሳውቃለን።",
     "enrollmentSuccessRedirect": "ምዝገባ ተሳክቷል! ወደ ክፍያ እየተሸጋገረ...",
@@ -481,8 +491,22 @@
     "noSlotsMessage": "ለተመረጠው ቀን ምንም ስሎቶች አይገኙም። እባክዎ ሌላ ቀን ይምረጡ።",
     "viewTodaySlots": "የዛሬን ስሎቶች እይ",
     "loadingSlots": "ስሎቶች በመጫን ላይ...",
-    "gridView": "ግሪድ እይታ",
+    "gridView": "የፍርግርግ እይታ",
     "calendarView": "የቀን መቁጠሪያ እይታ",
+    "bookingHistory": "የእርስዎ ቦታ ማስያዣ ታሪክ",
+    "viewManageBookings": "የእርስዎን የፉትሳል ቦታ ማስያዣዎች ይመልከቱ እና ያስተዳድሩ",
+    "hideHistory": "ታሪክ ደብቅ",
+    "showHistory": "ታሪክ አሳይ",
+    "confirmBooking": "ቦታ ማስያዣዎን ያረጋግጡ",
+    "bookingSummary": "የቦታ ማስያዣ ማጠቃለያ",
+    "contactName": "የእውቂያ ስም",
+    "contactEmail": "የእውቂያ ኢሜይል",
+    "numberOfPlayers": "የተጫዋቾች ብዛት",
+    "phoneNumberOptional": "ስልክ ቁጥር (ከተፈለገ)",
+    "enterFullName": "ሙሉ ስምዎን ያስገቡ",
+    "emailPlaceholder": "your.email@example.com",
+    "playersPlaceholder": "6",
+    "phonePlaceholder": "+251 9XX XXX XXXX",
     "bookYourSlotTitle": "የእርስዎን ስሎት ይዘዙ",
     "selectDate": "ቀን ይምረጡ",
     "available": "ይገኛል",
@@ -584,7 +608,8 @@
     "successfullyRegistered": "ለኢትከፍ ፕሮግራም በተሳካ ሁኔታ ተመዝግቧል!",
     "close": "ዝጋ",
     "registrationInitiated": "ምዝገባ ተጀምሯል! ወደ ክፍያ አቅጣጫ በመምራት ላይ...",
-    "registrationSuccessPaymentFailed": "ምዝገባ ተሳክቷል ነገር ግን ክፍያ አልተሳካም።"
+    "registrationSuccessPaymentFailed": "ምዝገባ ተሳክቷል ነገር ግን ክፍያ አልተሳካም።",
+    "registrationSubmitted": "ምዝገባ ለግምገማ ቀርቧል! አንዴ ከተረጋገጠ እናሳውቃለን።"
   },
   "auth": {
     "login": "ግባ",
