--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,6 +44,9 @@
     "orDragAndDrop": "or drag and drop",
     "viewDetails": "View Details",
     "invalidFileType": "Please upload an image file",
+    "free": "Free",
+    "download": "Download",
+    "enrolled": "enrolled",
     "pending": "Pending",
     "confirmed": "Confirmed",
     "cancelled": "Cancelled",
@@ -446,6 +449,8 @@
     "weeklySchedule": "Weekly Schedule",
     "dersProgram": "Weekly Ders Program",
     "dersProgramDesc": "View our weekly schedule of Islamic lectures and classes.",
+    "serviceFull": "Service Full",
+    "notAvailable": "Not Available",
     "failedToLoadServices": "Failed to load educational services",
     "enrollmentSubmitted": "Enrollment submitted for review! You will be notified once confirmed.",
     "enrollmentSuccessRedirect": "Enrollment successful! Redirecting to payment...",
@@ -483,6 +488,19 @@
     "timeSlot": "Time Slot",
     "noSlotsAvailable": "No Slots Available",
     "bookingHistory": "Your Booking History",
+    "viewManageBookings": "View and manage your futsal bookings",
+    "hideHistory": "Hide History",
+    "showHistory": "Show History",
+    "mainCourt": "Main Court",
+    "maxPlayers": "Max {{count}} players",
+    "contactName": "Contact Name",
+    "contactEmail": "Contact Email",
+    "numberOfPlayers": "Number of Players",
+    "phoneNumberOptional": "Phone Number (Optional)",
+    "enterFullName": "Enter your full name",
+    "emailPlaceholder": "your.email@example.com",
+    "playersPlaceholder": "6",
+    "phonePlaceholder": "+251 9XX XXX XXXX",
     "confirmBooking": "Confirm Your Booking",
     "bookingSummary": "Booking Summary",
     "whyPlayHere": {
