UI updated more professional

--- a/src/locales/am.json
+++ b/src/locales/am.json
@@ -10,7 +10,6 @@
     "login": "ግባ",
     "logout": "ውጣ",
     "register": "ተመዝግብ",
-    "dashboard": "ዳሽቦርድ",
     "profile": "መገለጫ",
     "settings": "ቅንብሮች",
     "search": "ፈልግ",
@@ -1099,28 +1098,32 @@
   "profile": {
     "title": "የእኔ መገለጫ",
     "subtitle": "የመለያዎን መረጃ እና ምርጫዎችን ያቀናቅሩ",
-    "personalInformation": "የግል መረጃ",
+    "personalInfo": "የግል መረጃ",
     "fullName": "ሙሉ ስም",
-    "emailAddress": "የኢሜይል አድራሻ",
-    "phoneNumber": "የስልክ ቁጥር",
+    "email": "የኢሜይል አድራሻ",
+    "phone": "የስልክ ቁጥር",
     "bio": "ባዮ",
     "memberSince": "አባል ከ",
     "edit": "አርም",
     "save": "አስቀምጥ",
     "cancel": "ተወው",
-    "enterFullName": "ሙሉ ስምዎን ያስገቡ",
-    "enterPhoneNumber": "የስልክ ቁጥርዎን ያስገቡ",
+    "bioPlaceholder": "ስለራስዎ ይንገሩን...",
     "notProvided": "አልተሰጠም",
-    "emailCannotBeChanged": "ኢሜይል ሊቀየር አይችልም",
+    "emailNotice": "ኢሜይል ሊቀየር አይችልም",
     "nameRequired": "ስም ያስፈልጋል",
-    "profileUpdatedSuccess": "መገለጫ በተሳካ ሁኔታ ተዘምኗል!",
-    "failedToUpdate": "መገለጫ ለመዘመን አልተሳካም",
+    "updateSuccess": "መገለጫ በተሳካ ሁኔታ ተዘምኗል!",
+    "updateError": "መገለጫ ለመዘመን አልተሳካም",
     "failedToLoad": "የመገለጫ ውሂብ ለመጫን አልተሳካም",
     "upcomingEvents": "የሚመጡ ዝግጅቶች",
     "donationsMade": "የተደረጉ ምጽዋቶች",
     "communityPoints": "የማህበረሰብ ነጥቦች",
-    "statistics": "ስታትስቲክስ",
-    "accountSettings": "የመለያ ቅንብሮች"
+    "statsTitle": "የማህበረሰብ ስታቲስቲክስ",
+    "quickActions": "ፈጣን ድርጊቶች",
+    "myBookings": "የእኔ ማስያዣዎች",
+    "makeDonation": "ምጽዋት ስጡ",
+    "browseEvents": "ዝግጅቶችን ያስሱ",
+    "noBio": "እስካሁን ምንም ባዮ አልተሰጠም።",
+    "updating": "በማዘመን ላይ..."
   },
   "islamicCalendar": {
     "title": "የእስላም",
@@ -1268,6 +1271,8 @@
     "nextPrayer": "የሚቀጥለው ስግደት",
     "timeRemaining": "የቀረው ጊዜ",
     "admin": {
+      "quickActions": "ፈጣን ድርጊቶች",
+      "backToDashboard": "ወደ ዳሽቦርድ ይመለሱ",
       "title": "የአስተዳዳሪ ዳሽቦርድ",
       "totalUsers": "ጠቅላላ ተጠቃሚዎች",
       "totalStaff": "ጠቅላላ ሰራተኞች",
