--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -10,7 +10,6 @@
     "login": "تسجيل الدخول",
     "logout": "تسجيل الخروج",
     "register": "التسجيل",
-    "dashboard": "لوحة التحكم",
     "profile": "الملف الشخصي",
     "settings": "الإعدادات",
     "search": "بحث",
@@ -1082,28 +1081,32 @@
   "profile": {
     "title": "ملفي الشخصي",
     "subtitle": "إدارة معلومات حسابك وتفضيلاتك",
-    "personalInformation": "المعلومات الشخصية",
+    "personalInfo": "المعلومات الشخصية",
     "fullName": "الاسم الكامل",
-    "emailAddress": "عنوان البريد الإلكتروني",
-    "phoneNumber": "رقم الهاتف",
+    "email": "البريد الإلكتروني",
+    "phone": "رقم الهاتف",
     "bio": "السيرة الذاتية",
     "memberSince": "عضو منذ",
     "edit": "تعديل",
     "save": "حفظ",
     "cancel": "إلغاء",
-    "enterFullName": "أدخل اسمك الكامل",
-    "enterPhoneNumber": "أدخل رقم هاتفك",
+    "bioPlaceholder": "أخبرنا عن نفسك...",
     "notProvided": "غير متوفر",
-    "emailCannotBeChanged": "لا يمكن تغيير البريد الإلكتروني",
+    "emailNotice": "لا يمكن تغيير البريد الإلكتروني",
     "nameRequired": "الاسم مطلوب",
-    "profileUpdatedSuccess": "تم تحديث الملف الشخصي بنجاح!",
-    "failedToUpdate": "فشل تحديث الملف الشخصي",
+    "updateSuccess": "تم تحديث الملف الشخصي بنجاح!",
+    "updateError": "فشل تحديث الملف الشخصي",
     "failedToLoad": "فشل تحميل بيانات الملف الشخصي",
     "upcomingEvents": "الفعاليات القادمة",
     "donationsMade": "التبرعات المقدمة",
     "communityPoints": "نقاط المجتمع",
-    "statistics": "الإحصائيات",
-    "accountSettings": "إعدادات الحساب"
+    "statsTitle": "إحصائيات المجتمع",
+    "quickActions": "الإجراءات السريعة",
+    "myBookings": "حجوزاتي",
+    "makeDonation": "تبرع الآن",
+    "browseEvents": "تصفح الفعالیات",
+    "noBio": "لم يتم تقديم سيرة ذاتية بعد.",
+    "updating": "جاري التحديث..."
   },
   "islamicCalendar": {
     "title": "التقويم",
@@ -1274,7 +1277,9 @@
     "nextPrayer": "الصلاة القادمة",
     "timeRemaining": "الوقت المتبقي",
     "admin": {
-      "title": "لوحة تحكم المسؤول",
+      "quickActions": "الإجراءات السريعة",
+      "backToDashboard": "العودة إلى لوحة القيادة",
+      "title": "لوحة التحكم للمسؤول",
       "totalUsers": "إجمالي المستخدمين",
       "totalStaff": "إجمالي الموظفين",
       "totalDonations": "إجمالي التبرعات",
