--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,7 +10,6 @@
     "login": "Login",
     "logout": "Logout",
     "register": "Register",
-    "dashboard": "Dashboard",
     "profile": "Profile",
     "settings": "Settings",
     "search": "Search",
@@ -1117,28 +1116,32 @@
   "profile": {
     "title": "My Profile",
     "subtitle": "Manage your account information and preferences",
-    "personalInformation": "Personal Information",
+    "personalInfo": "Personal Information",
     "fullName": "Full Name",
-    "emailAddress": "Email Address",
-    "phoneNumber": "Phone Number",
+    "email": "Email Address",
+    "phone": "Phone Number",
     "bio": "Bio",
     "memberSince": "Member Since",
     "edit": "Edit",
     "save": "Save",
     "cancel": "Cancel",
-    "enterFullName": "Enter your full name",
-    "enterPhoneNumber": "Enter your phone number",
+    "bioPlaceholder": "Tell us about yourself...",
     "notProvided": "Not provided",
-    "emailCannotBeChanged": "Email cannot be changed",
+    "emailNotice": "Email cannot be changed",
     "nameRequired": "Name is required",
-    "profileUpdatedSuccess": "Profile updated successfully!",
-    "failedToUpdate": "Failed to update profile",
+    "updateSuccess": "Profile updated successfully!",
+    "updateError": "Failed to update profile",
     "failedToLoad": "Failed to load profile data",
     "upcomingEvents": "Upcoming Events",
     "donationsMade": "Donations Made",
     "communityPoints": "Community Points",
-    "statistics": "Statistics",
-    "accountSettings": "Account Settings"
+    "statsTitle": "Community Stats",
+    "quickActions": "Quick Actions",
+    "myBookings": "My Bookings",
+    "makeDonation": "Make Donation",
+    "browseEvents": "Browse Events",
+    "noBio": "No bio provided yet.",
+    "updating": "Updating..."
   },
   "islamicCalendar": {
     "title": "Islamic",
@@ -1254,6 +1257,8 @@
     "nextPrayer": "Next Prayer",
     "timeRemaining": "Time remaining",
     "admin": {
+      "quickActions": "Quick Actions",
+      "backToDashboard": "Back to Dashboard",
       "title": "Admin Dashboard",
       "totalUsers": "Total Users",
       "totalStaff": "Total Staff",
